To vomit forth blasphemy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(sysopy C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(sysopy main.c zestaw1/main.c zestaw1/main_dyn.c)
+add_executable(sysopy main.c zestaw1/zad3b/main.c zestaw1/zad3b/main_dyn.c)
