--- a/cw03/zad2/makefile
+++ b/cw03/zad2/makefile
@@ -6,6 +6,9 @@ all: main
 main: main.c
 	$(CC) $(FLAGS) main.c -lm -o main
 
+test: test.c
+	$(CC) $(FLAGS) test.c -lm -o test
+
 clean:
 	rm -f main
-
+	rm -f test
