--- a/cw03/zad2/makefile
+++ b/cw03/zad2/makefile
@@ -6,8 +6,14 @@ all: main
 main: main.c
 	$(CC) $(FLAGS) main.c -lm -o main
 
-test: test.c
+comp_test: test.c
 	$(CC) $(FLAGS) test.c -lm -o test
+
+test:
+	make main
+	make comp_test
+	./test 10 20 30
+	make clean_all
 
 clean:
 	rm -f main
@@ -15,6 +21,22 @@ clean:
 
 clean_all:
 	make clean
+	make clean_files
+
+clean_files:
 	rm -f A*
 	rm -f B*
 	rm -f C*
+	rm -f lista
+
+make wchuj:
+	make test
+	make test
+	make test
+	make test
+	make test
+	make test
+	make test
+	make test
+	make test
+	make test
