--- a/cw03/zad3/makefile
+++ b/cw03/zad3/makefile
@@ -6,8 +6,17 @@ all: main
 main: main.c
 	$(CC) $(FLAGS) main.c -lm -o main
 
-test: test.c
+comp_test: test.c
 	$(CC) $(FLAGS) test.c -lm -o test
+
+test:
+	make main
+	make comp_test
+	./test 100 20 30
+	./main lista 10 10 PASTE 1 1
+	./test 100 20 30
+	./main lista 3 10 NORMAL 1 1
+	make clean_all
 
 clean:
 	rm -f main
