--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(sysopy C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(sysopy main.c cw01/zad3b/main.c cw01/zad3b/main_dyn.c cw02/zad1/zad1.c cw03/zad2/main.c cw04/zad1/main.c)
+add_executable(sysopy main.c cw01/zad3b/main.c cw01/zad3b/main_dyn.c cw02/zad1/zad1.c cw03/zad2/main.c cw04/zad1/main.c cw04/zad3/main.c cw04/zad2/exec_test.c cw04/zad4a/sender.c cw04/zad4a/catcher.c)
